// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sheet > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  aria-label="Sheet"
  class="rmd-dialog rmd-dialog--fixed rmd-dialog--outline rmd-sheet rmd-sheet--horizontal rmd-sheet--raised rmd-sheet--left rmd-sheet--media-width"
  id="dialog-_r_0_"
  role="dialog"
  tabindex="-1"
/>
`;

exports[`Sheet > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  aria-label="Sheet"
  class="rmd-dialog rmd-dialog--fixed rmd-dialog--outline rmd-sheet rmd-sheet--horizontal rmd-sheet--raised rmd-sheet--left rmd-sheet--media-width custom-class-name"
  id="dialog-_r_0_"
  role="dialog"
  style="color: white;"
  tabindex="-1"
/>
`;
